<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Map1</string>
    <string name="LoginLabel">Login Page</string>
    <string name="emailLabel">E-Mail</string>
    <string name="passLabel">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="or">or</string>
    <string name="SignUp">Sign Up</string>
    <string name="EmailInput_hint">Enter your e-mail</string>
    <string name="PassInput_hint">Enter your password</string>
    <string name="HelloLabel">"Hello~ "</string>
    <string name="Labm406">http://labm406.serveftp.com/mobile/index.php</string>
    <string name="goWeb">Go to Web version</string>
    <string name="TestButton">Get Something!</string>

</resources>